--- a/HTML/index.html
+++ b/HTML/index.html
@@ -124,7 +124,7 @@
         <td>abc</td>
         <td>abc</td>
         <td>abc</td>
-        <td rowspan="2">Project</td>
+        <td rowspan="2">Projects</td>
 
  
     </tr>
